welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:11: error: Invalid literal number
for(i<-1to 7)
       ^Runner:6: error: ')' expected but integer literal found.
for(i<- to 7)
           ^Runner:21: error: illegal start of simple expression
	}
        ^