welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var i=0
var pas=0
avance()

for(i<- to 7)
{
	avance()
}
gauche()
for(i<-1to 7)
{
	avance()
}




